--- a/less/options-contributors.less
+++ b/less/options-contributors.less
@@ -1,56 +1,109 @@
-#options {
-  .contributors {
-    position: absolute;
-    bottom: -6rem;
-    left: 0;
-    width: 100%;
-    -webkit-transition: background-color 0.5s ease;
-    background: @shadowColorDark;
-    @media (min-width: 1700px) { background: @shadowColor; }
-    border-radius: @borderRadius 0 0 @borderRadius;
-    box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.5), inset -5px 10px 10px -10px rgba(0,0,0,0.5);
+#credits {
+  position: absolute;
+  width: 100%;
+  // top: 80%;
 
+  > div {
+    background: @inputBackground;
     > a {
-      padding: 0.25rem 2rem;
-      width: 8.875rem;
+      padding: 0.25rem;
+      // width: 8.875rem;
       display: inline-block;
-      position: relative;
+      // position: relative;
 
       img {
-        width: 40px;
-        height: 40px;
+        width: 35px;
+        height: 35px;
         border-radius: 50%;
         box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
         background-color: #fff;
         margin: 5px;
       }
+    }
+    > a:first-child { float: left; }
+    > a:last-child { float: right; }
+  }
 
-      strong { 
-        display: block; 
-        -webkit-transition: color 0.5s ease;
-      }
+  > ul {
+    margin: 0;
+    padding: 0;
 
-      &:hover strong { color: @logoColorLight; }
+    li { 
+      list-style: none; 
+      color: @darkFontColor;
+      font-size: 1.5rem;
+      margin-bottom: 1rem;
 
-      strong, span { font-weight: @fontWeightNormal; }
-
-      span {
-        position: absolute;
-        top: 0.5rem;
-        font-size: 2rem;
-        font-weight: @fontWeightLight;
-      }
-
-      &:first-of-type {
-        text-align: right;
-        span { left: 1rem; }
-      }
-      &:last-of-type {
-        padding-left: 1rem;
-        width: 9.875rem;
-        img { margin-left: 0.5rem; }
-        span { right: 0rem; }
+      a {
+        display: block;
+        margin-left: 0.5rem;
+        color: #063457;
+        &:hover { text-decoration: underline; }
       }
     }
   }
+
+  > img {
+    margin: auto;
+    position: absolute;
+    right: 0rem;
+    bottom: 1rem;
+  }
 }
+
+// #options {
+//   .contributors {
+//     position: absolute;
+//     bottom: -6rem;
+//     left: 0;
+//     width: 100%;
+//     -webkit-transition: background-color 0.5s ease;
+//     background: @shadowColorDark;
+//     @media (min-width: 1700px) { background: @shadowColor; }
+//     border-radius: @borderRadius 0 0 @borderRadius;
+//     box-shadow: inset -5px -10px 10px -10px rgba(0,0,0,0.5), inset -5px 10px 10px -10px rgba(0,0,0,0.5);
+
+//     > a {
+//       padding: 0.25rem 2rem;
+//       width: 8.875rem;
+//       display: inline-block;
+//       position: relative;
+
+//       img {
+//         width: 40px;
+//         height: 40px;
+//         border-radius: 50%;
+//         box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.25);
+//         background-color: #fff;
+//         margin: 5px;
+//       }
+
+//       strong { 
+//         display: block; 
+//         -webkit-transition: color 0.5s ease;
+//       }
+
+//       &:hover strong { color: @logoColorLight; }
+
+//       strong, span { font-weight: @fontWeightNormal; }
+
+//       span {
+//         position: absolute;
+//         top: 0.5rem;
+//         font-size: 2rem;
+//         font-weight: @fontWeightLight;
+//       }
+
+//       &:first-of-type {
+//         text-align: right;
+//         span { left: 1rem; }
+//       }
+//       &:last-of-type {
+//         padding-left: 1rem;
+//         width: 9.875rem;
+//         img { margin-left: 0.5rem; }
+//         span { right: 0rem; }
+//       }
+//     }
+//   }
+// }
