--- a/template/option.hbs
+++ b/template/option.hbs
@@ -1,33 +1,35 @@
-<ul>
-  <li><i class="icon-tools active" data-content="general_options" >General</i></li><!--
-  --><li><i class="icon-background" data-content="theme_options" >Theme</i></li><!--
-  --><li><i class="icon-info" data-content="credits" >Credits</i></li><!--
---></ul>
+<i class="icon-tools active" data-content="general_options" >{{! <span>General</span> }}</i>
+<i class="icon-background" data-content="theme_options" >{{! <span>Theme</span> }}</i>
 <div>
   <section id="general_options" class="show">
-    <h1>Style</h1>
-    <div class="checkbox">
-      <input id="{{darkFont.name}}" type="checkbox" name="{{darkFont.name}}" value="{{darkFont.name}}" {{#if darkFont.value}} checked="checked" {{/if}} />
-      <label for="{{darkFont.name}}" class="icon-check">use dark font color</label>
-    </div>
+    <div>
+      <h1>Style</h1>
+      <div class="checkbox">
+        <input id="{{darkFont.name}}" type="checkbox" name="{{darkFont.name}}" value="{{darkFont.name}}" {{#if darkFont.value}} checked="checked" {{/if}} />
+        <label for="{{darkFont.name}}" class="icon-check">use dark font color</label>
+      </div>
 
-    <div class="checkbox">
-      <input id="{{grayApps.name}}" type="checkbox" name="{{grayApps.name}}" value="{{grayApps.name}}" {{#if grayApps.value}} checked="checked" {{/if}} />
-      <label for="{{grayApps.name}}" class="icon-check">use grayscaled app icons</label> 
+      <div class="checkbox">
+        <input id="{{grayApps.name}}" type="checkbox" name="{{grayApps.name}}" value="{{grayApps.name}}" {{#if grayApps.value}} checked="checked" {{/if}} />
+        <label for="{{grayApps.name}}" class="icon-check">use grayscaled app icons</label> 
+      </div>
+      <h1>Clock format</h1>
+      <div class="checkbox">
+        <input id="{{twelveHourClock.name}}" type="checkbox" name="{{twelveHourClock.name}}" value="{{twelveHourClock.name}}" {{#if twelveHourClock.value}} checked="checked" {{/if}} />
+        <label for="{{twelveHourClock.name}}" class="icon-check">use twelve hour clock format</label> 
+      </div>
     </div>
-    <h1>Mail</h1>
-    <div class="mail_label">
-      <form>
-        <label for="{{label.name}}">Add a google label to check for new mails. Clear it, to use the inbox. </label>
-        <input id="{{label.name}}" name="{{label.name}}" value="{{label.value}}" type="text" />
-        <input type="submit" value="Save" />
-      </form>
-    </div>
-    <h1>Clock format</h1>
-    <div class="checkbox">
-      <input id="{{twelveHourClock.name}}" type="checkbox" name="{{twelveHourClock.name}}" value="{{twelveHourClock.name}}" {{#if twelveHourClock.value}} checked="checked" {{/if}} />
-      <label for="{{twelveHourClock.name}}" class="icon-check">use twelve hour clock format</label> 
-    </div>
+    <div>
+      <h1>Mail</h1>
+      <div class="mail_label">
+        <form>
+          <label for="{{label.name}}">Add a google label to check for new mails. </label>
+          <input id="{{label.name}}" name="{{label.name}}" value="{{label.value}}" type="text" />
+          <input type="submit" value="Save" />
+          <small>Clear it, to use the inbox.</small>
+        </form>
+      </div>
+    </div>    
   </section>
   <section id="theme_options" class="">
     {{#each themes}}
@@ -40,26 +42,4 @@
       </div>
     {{/each}}
   </section>
-  <section id="credits" class="">
-    <ul>
-      <li>FlipClock.js<a href="http://flipclockjs.com/">Homepage</a></li>
-      <li>Moment.js<a href="http://momentjs.com/">Homepage</a></li>
-      <li>Google Webfont Lato<a href="http://www.google.com/fonts/specimen/Lato">Font Description</a></li>
-      <li>bxSlider<a href="http://bxslider.com/">Homepage</a></li>
-      <li>jQuery<a href="http://jquery.com/">Homepage</a></li>
-    </ul>
-    <img src="/icon/icon128.png" alt="extension icon" />
-  </section>
-  <div class="contributors">
-    <a href="{{contributors.hacker.profile_link}}">
-      <span>Hacker</span>
-      <img src="{{contributors.hacker.avatar}}" alt="avatar for {{contributors.hacker.name}}">
-      <strong>{{contributors.hacker.name}}</strong>
-    </a>
-    <a href="{{contributors.designer.profile_link}}">
-      <img src="{{contributors.designer.avatar}}" alt="avatar for {{contributors.designer.name}}">
-      <strong>{{contributors.designer.name}}</strong>
-      <span>Designer</span>
-    </a>
-  </div>
 </div>
