removed unnecessary code and text shadow

--- a/less/theme.less
+++ b/less/theme.less
@@ -30,7 +30,7 @@ body {
   background-position: top center;
   font: @font;
   font-weight: @fontWeightNormal;
-  text-shadow: @textShadowLight;
+  // text-shadow: @textShadowLight;
   color: @lightFontColor;
 
   h1,
