--- a/less/main.less
+++ b/less/main.less
@@ -50,5 +50,5 @@ body {
 @import 'mail';
 @import 'options';
 @import 'options-input';
-@import 'options-contributors';
+@import 'contributors';
 @import 'theme';
