--- a/template/option.hbs
+++ b/template/option.hbs
@@ -16,7 +16,7 @@
       <h1>Clock format</h1>
       <div class="checkbox">
         <input id="{{twelveHourClock.name}}" type="checkbox" name="{{twelveHourClock.name}}" value="{{twelveHourClock.name}}" {{#if twelveHourClock.value}} checked="checked" {{/if}} />
-        <label for="{{twelveHourClock.name}}" class="icon-check">use twelve hour clock format</label> 
+        <label for="{{twelveHourClock.name}}" class="icon-check">use 12h clock format</label> 
       </div>
     </div>
     <div>
