--- a/less/options.less
+++ b/less/options.less
@@ -95,15 +95,19 @@
 
         > div {
           display: inline-block;
-          width: 49%;
+          width: 40%;
 
-          &:last-child { float: right; }
+          &:first-child h1:last-of-type { margin-top: 0.5rem; }
+          &:last-child { 
+            float: right; 
+            width: 55%;
+          }
 
           > h1 {
             color: @darkFontColor;
             font-weight: @fontWeightLight;
             font-size: 2rem;
-            margin: 0 0 0.5rem 0;
+            margin: 0;
           }
         }
       }
