--- a/less/actions.less
+++ b/less/actions.less
@@ -20,8 +20,15 @@
     }
     
     > section {
+      position: relative;
+      > img { 
+        position: absolute;
+        top: 1rem;
+        right: 0;
+        width: 92px;
+        height: 92px;
+      }
       cursor: default;
-      /*display: none;*/
       visibility: hidden;
       opacity: 0;
       -webkit-transition: visibility 0.5s ease, opacity 0.5s ease;
