--- a/less/font.less
+++ b/less/font.less
@@ -3,24 +3,7 @@
 @fonts_path_lato: "@{fonts_path}lato/";
 
 // google web font Lato
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Lato Hairline'), local('Lato-Hairline'), url("@{fonts_path_lato}Lato-Hairline.woff") format('woff');
-}
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Lato Light'), local('Lato-Light'), url("@{fonts_path_lato}Lato-Light.woff") format('woff');
-}
-@font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url("@{fonts_path_lato}Lato-Regular.woff") format('woff');
-}
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
 
 // icon font YANTRE -> build with http://fontastic.me/
 @font-face {
