fixed font import and mail name position

--- a/less/mail.less
+++ b/less/mail.less
@@ -39,6 +39,7 @@
       text-overflow: ellipsis;
       display: inline-block;
       white-space: nowrap;
+      vertical-align: bottom;
     }
   }
 
