--- a/less/font.less
+++ b/less/font.less
@@ -3,7 +3,7 @@
 @fonts_path_lato: "@{fonts_path}lato/";
 
 // google web font Lato
-@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400);
+@import url("http://fonts.googleapis.com/css?family=Lato:100,300,400");
 
 // icon font YANTRE -> build with http://fontastic.me/
 @font-face {
