changed font using to work on windows

--- a/less/font.less
+++ b/less/font.less
@@ -4,22 +4,36 @@
 
 // google web font Lato
 @font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 100;
-  src: local('Lato Hairline'), local('Lato-Hairline'), url("@{fonts_path_lato}Lato-Hairline.woff") format('woff');
+    font-family: 'Lato';
+    src: url("@{fonts_path_lato}lato-hairline.eot");
+    src: url("@{fonts_path_lato}lato-hairline.eot?#iefix") format("embedded-opentype"),
+         url("@{fonts_path_lato}lato-hairline.woff") format("woff"),
+         url("@{fonts_path_lato}lato-hairline.ttf") format("truetype"),
+         url("@{fonts_path_lato}lato-hairline.svg#latohairline") format("svg");
+    font-weight: 100;
+    font-style: normal;
 }
+
 @font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 300;
-  src: local('Lato Light'), local('Lato-Light'), url("@{fonts_path_lato}Lato-Light.woff") format('woff');
+    font-family: "Lato";
+    src: url("@{fonts_path_lato}lato-light.eot");
+    src: url("@{fonts_path_lato}lato-light.eot?#iefix") format("embedded-opentype"),
+         url("@{fonts_path_lato}lato-light.woff") format("woff"),
+         url("@{fonts_path_lato}lato-light.ttf") format("truetype"),
+         url("@{fonts_path_lato}lato-light.svg#latolight") format("svg");
+    font-weight: 300;
+    font-style: normal;
 }
+
 @font-face {
-  font-family: 'Lato';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Lato Regular'), local('Lato-Regular'), url("@{fonts_path_lato}Lato-Regular.woff") format('woff');
+    font-family: "Lato";
+    src: url("@{fonts_path_lato}lato-regular.eot");
+    src: url("@{fonts_path_lato}lato-regular.eot?#iefix") format("embedded-opentype"),
+         url("@{fonts_path_lato}lato-regular.woff") format("woff"),
+         url("@{fonts_path_lato}lato-regular.ttf") format("truetype"),
+         url("@{fonts_path_lato}lato-regular.svg#latoregular") format("svg");
+    font-weight: 400;
+    font-style: normal;
 }
 
 // icon font YANTRE -> build with http://fontastic.me/
